# Security-Embedded-System

./: README.md
src/: CMakeLists.txt  LED_ctrl.c  LED_ctrl.h  alarm_ctrl.c  alarm_ctrl.h  main.c  motion_sensor.c  motion_sensor.h  proximity_sensor.c  proximity_sensor.h  servo_ctrl.c  servo_ctrl.h  sound_sensor.c  sound_sensor.h
